--- a/XMLParserConsoleTester/XMLParserWCFClient/MainWindow.xaml
+++ b/XMLParserConsoleTester/XMLParserWCFClient/MainWindow.xaml
@@ -24,7 +24,7 @@
             <Button Content="Parse File" Click="OnClick_GetParameters" Grid.Column="1" Margin="372,0,200,0"/>
             <Button Content="Browse" Click="OnClick_Browse" Grid.Column="1" Grid.Row="0" Margin="200,0,380,0"/>
             <Button Content="Refresh" Click="OnClick_Refresh" Grid.Column="1" Margin="552,0,0,0"/>
-            <TextBox x:Name="Attributes_Display" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,552,-391" Text="Parser results displayed here"/>
+            <TextBox x:Name="Attributes_Display" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,30,-0.4,-390.6" Text="Parser results displayed here" Grid.RowSpan="2"/>
 
         </Grid>
     </StackPanel>
